# go-libghostty

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  TODO.md  alloc.go  doc.go  flake.nix  focus.go  focus_test.go  get_multi.go  go.mod  go.sum  key_encoder.go  key_event.go  key_test.go  kitty_graphics.go  kitty_graphics_test.go  mouse_encoder.go  mouse_event.go  mouse_test.go  render_state_cell.go  render_state_data.go  render_state_row.go  run.sh  screen.go  terminal.go  terminal_data.go  terminal_effect.go  terminal_opt_test.go
.github/workflows/: test.yml
examples/effects/: main.go
examples/mp4/: main.go
examples/png/: main.go
examples/render-cmd/: main.go
